# time_server

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
static/: index.html
