[package]
name = "time_server"
version = "0.1.0"
authors = ["TaewonKim"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0.0"
actix-files = "0.2.1"
env_logger = "0.7.1"
#log = { version = "0.4", features = ["std", "serde"] }
chrono = { version = "0.4", features = [ "serde" ] }
serde = {version = "1.0", features = [ "derive" ]}
